# qucosi

./: CMakeLists.txt  Doxyfile  Makefile  MultiQubit.h  Qubit.h  README  main.cpp  qucosi.bib
QuCoSi/: Aux  Basis  CMakeLists.txt  Gate  Qubit  Vector
src/: Aux.h  Base.h  Basis.h  CMakeLists.txt  Gate.h  Makefile  MultiQubit.h  Qubit.h  Vector.h  main.cpp
tests/: AlgorithmsTest.h  CMakeLists.txt  GateTest.h  QubitTest.h  VectorTest.h  main.cpp  sandbox.cpp  testall.cpp
