cmake_minimum_required(VERSION 2.6)

PROJECT(QuCoSi)

#SET(CMAKE_VERBOSE_MAKEFILE ON)

#ADD_DEFINITIONS(-Wall -ansi -pedantic)
ADD_DEFINITIONS(-Wall -ansi)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)

FIND_PACKAGE(Doxygen)
IF (DOXYGEN_FOUND)
  ADD_CUSTOM_TARGET(doc ${DOXYGEN_EXECUTABLE}
    ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile)
ENDIF (DOXYGEN_FOUND)
